# sleeper-api-wrapper

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  tox_check.yaml
docs/: drafts.md  league.md  players.md  stats.md  user.md
sleeper_wrapper/: __init__.py  base_api.py  drafts.py  league.py  players.py  stats.py  user.py
tests/: test_drafts.py  test_league.py  test_players.py  test_stats.py  test_user.py
webapp/: __init__.py  config.py  main.py
webapp/services/: __init__.py  sleeper_client.py
webapp/static/: app.css
webapp/templates/: base.html  dashboard.html  draft.html  players.html  rosters.html
