# pyproject.toml

[tool.poetry]
name = "sleeper-api-wrapper"
packages = [ { include = "sleeper_wrapper" } ]
version = "1.1.0"
description = "A Python API wrapper for Sleeper Fantasy sports, as well as tools to simplify received data."
authors = ["Dan Song, Ford Higgins <py-sleeper-api-wrapper-maintainers@googlegroups.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/dtsong/sleeper-api-wrapper"
repository = "https://github.com/dtsong/sleeper-api-wrapper"
documentation = "https://github.com/dtsong/sleeper-api-wrapper/tree/master/docs"
keywords = ["fantasy football", "fantasy sports", "sports", "sleeper fantasy", "sleeper"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
